--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-This Add-on is not created by, affiliated with or sponsored by ZeniMax Media Inc. or its affiliates. The Elder Scrolls® and related logos are registered trademarks or trademarks of ZeniMax Media Inc. in the United States and/or other countries. All rights reserved.
+DISCLAIMER: This Add-on is not created by, affiliated with or sponsored by ZeniMax Media Inc. or its affiliates. The Elder ScrollsÂ® and related logos are registered trademarks or trademarks of ZeniMax Media Inc. in the United States and/or other countries. All rights reserved.
+
+
+I quickly got tired of clicking "View Achievement" and getting kicked out of the dye station today, so I made this addon to pop up an achievement link window instead.
+
+If you have any issues, I can be reached on esoui.com or ingame at @Randactyl
+
+---
+
+If you like my work and feel the urge to contribute, I'm always willing to accept in-game gold sent to @Randactyl :D
